[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]

[node name="Node" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Sprite1" type="Sprite" parent="." index="0"]

centered = false
_sections_unfolded = [ "Offset" ]

[node name="Sprite2" type="Sprite" parent="." index="1"]

position = Vector2( 704, 640 )

[node name="Sprite3" type="Sprite" parent="." index="2"]

position = Vector2( 1216, 192 )


